--- a/new 3.html
+++ b/new 3.html
@@ -28,11 +28,11 @@
          <div class="m-template__body">
             <div class="m-trx">
                <div class="m-trx__amt amount">
-                  <p id="amount">£25.50</p>
+                  <p id="amount"></p>
                </div>
                <div class="m-trx__meta details">
-                  <p id="organisation_name">White Stuff</p>
-                  <p id="merchant_reference">Himanshu Tiwari</p>
+                  <p id="organisation_name"></p>
+                  <p id="merchant_reference"></p>
                </div>
             </div>
             <div class="m-payment__form">
