--- a/new 3.html
+++ b/new 3.html
@@ -24,6 +24,7 @@
 	  </style>
    </head>
    <body>
+      <img src="https://rhdtta.github.io/whtiestuff-checkout/DE%20progress%20bar%20mobile.png">
       <div class="m-template">
          <div class="m-template__body">
             <div class="m-trx">
