--- a/new4.html
+++ b/new4.html
@@ -5,7 +5,7 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
-        <div class="m-template__logo ng-tns-c8-13 ng-star-inserted" style="background-image: url(&quot;blob:https://sandbox.omni.verifone.cloud/7e2ea6c9-daea-40bc-bce5-d4589f3d2daf&quot;);">
+        <div class="m-template__logo ng-tns-c8-13 ng-star-inserted">
         </div>
         <div class="m-trx">
             <div class="m-trx__amt amount">
