--- a/new4.html
+++ b/new4.html
@@ -6,6 +6,7 @@
 	<div class="m-template">
     <div class="m-template__body">
         <div class="m-template__logo ng-tns-c8-13 ng-star-inserted">
+		<img src="https://rhdtta.github.io/whtiestuff-checkout/DE%20progress%20bar%20mobile.png">
         </div>
         <div class="m-trx">
             <div class="m-trx__amt amount">
