--- a/new4.html
+++ b/new4.html
@@ -5,8 +5,9 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
-        <div class="m-template__logo ng-tns-c8-13 ng-star-inserted">
+        <div class="m-template__logo">
 		<img src="https://rhdtta.github.io/whtiestuff-checkout/DE%20progress%20bar%20mobile.png">
+		<img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20mobile.png">
         </div>
 	    
         <div class="m-trx">
