--- a/new4.html
+++ b/new4.html
@@ -5,10 +5,11 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
-        <div class="m-template__logo">
-		<img src="https://rhdtta.github.io/whtiestuff-checkout/DE%20progress%20bar%20mobile.png">
+	    <img src="https://rhdtta.github.io/whtiestuff-checkout/DE%20progress%20bar%20mobile.png">
+<!--         <div class="m-template__logo">
 		
-        </div>
+		
+        </div> -->
 	    <hr>
 	    
         <div class="m-trx">
