--- a/new3_.html
+++ b/new3_.html
@@ -5,9 +5,12 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
-        <div class="m-template__logo ng-tns-c8-13 ng-star-inserted">
-		<img src="https://rhdtta.github.io/whtiestuff-checkout/DE%20progress%20bar%20mobile.png">
-        </div>
+	    <img src="https://rhdtta.github.io/whtiestuff-checkout/DE%20progress%20bar%20mobile.png">
+<!--         <div class="m-template__logo">
+		
+		
+        </div> -->
+	    <hr>
 	    
         <div class="m-trx">
             <div class="m-trx__amt amount">
