--- a/new3_.html
+++ b/new3_.html
@@ -11,6 +11,7 @@
 		
         </div> -->
 	    <hr>
+	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20mobile.png">
 	    
         <div class="m-trx">
             <div class="m-trx__amt amount">
