--- a/new3_.html
+++ b/new3_.html
@@ -13,7 +13,10 @@
 	    <hr>
 	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20mobile.png">
 	    
-        <div class="m-trx">
+        <div class="m-trx" style="display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;">
             <div class="m-trx__amt amount">
                 <p class="ng-tns-c8-13" id="amount" style="color: rgb(100, 137, 189);"></p>
             </div>
