--- a/new5.html
+++ b/new5.html
@@ -5,7 +5,8 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
-	    <img src="https://rhdtta.github.io/whtiestuff-checkout/DE%20progress%20bar%20mobile.png">
+	    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png">
+	    <img src="lock.png">
 	    <hr>
 	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20mobile.png">
 	    
