--- a/new6.html
+++ b/new6.html
@@ -5,18 +5,12 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
-	    <img src="https://rhdtta.github.io/whtiestuff-checkout/DE%20progress%20bar%20mobile.png">
-<!--         <div class="m-template__logo">
-		
-		
-        </div> -->
+	    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png">
+	    <img src="lock.png">
 	    <hr>
 	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20mobile.png">
 	    
-        <div class="m-trx" style="display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;">
+        <div class="m-trx">
             <div class="m-trx__amt amount">
                 <p class="ng-tns-c8-13" id="amount" style="color: rgb(100, 137, 189);"></p>
             </div>
