Update and rename new666.html to new6666.html

--- a/new6666.html
+++ b/new6666.html
@@ -5,8 +5,11 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
-	    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png">
-	    <img src="lock.png">
+	    <div>
+		    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png">
+		    <img src="lock.png">
+		    <p>Secure Checkout</p>
+	    </div>
 	    <hr>
 	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20mobile.png">
 	    
