--- a/new6666.html
+++ b/new6666.html
@@ -5,10 +5,13 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
-	    <div>
-		    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png">
-		    <img src="lock.png">
-		    <p>Secure Checkout</p>
+	    <div class="container-fluid">
+		    <div class="row">
+			    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png">
+			    <img src="lock.png">
+			    <p>Secure Checkout</p>
+		    </div>
+		    
 	    </div>
 	    <hr>
 	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20mobile.png">
