Update and rename new66666.html to new7.html

--- a/new7.html
+++ b/new7.html
@@ -5,15 +5,19 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
-	    <div class="container-fluid">
-		    <div class="row">
-			    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png">
-			    <img src="lock.png">
-			    <p>Secure Checkout</p>
+	    <div class="container-fluid" style="margin-top: 1%">
+		    <div class="col-md-4 col-md-offset-4 text-center">
+			    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png" width="45%" height="auto">
 		    </div>
+		    <h6>
+		    	<div class="text-right col-md-2 col-md-offset-2">
+		    		<img src="lock.png" width="12%" height="auto">
+				Secure Checkout
+			</div>
+		    </h6>
 		    
 	    </div>
-	    <hr>
+	    <hr style="margin-top: 8px">
 	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20mobile.png">
 	    
         <div class="m-trx">
