Update and rename new77.html to new777.html

--- a/new777.html
+++ b/new777.html
@@ -18,7 +18,7 @@
 		    
 	    </div>
 	    <hr style="margin-top: 8px">
-	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20desktop.png">
+	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20desktop.png" width="100%">
 	    
         <div class="m-trx">
             <div class="m-trx__amt amount">
