Update and rename new777.html to new7777.html

--- a/new7777.html
+++ b/new7777.html
@@ -30,11 +30,9 @@
             </div>
         </div>
 
-        <div class="m-payment__form has-style">
-            <form class="ng-tns-c8-13"
-                id="paymentForm" method="POST">
-            </form>
-            <div class="ng-tns-c8-13" id="jwt"></div>
+        <div class="m-payment__form">
+            <form id="payment_fieldset" method="POST"></form>
+            <div id="jwt"></div>
         </div>
     </div>
 </div>
