--- a/new7777.html
+++ b/new7777.html
@@ -22,11 +22,11 @@
 	    
         <div class="m-trx">
             <div class="m-trx__amt amount">
-                <p class="ng-tns-c8-13" id="amount" style="color: rgb(100, 137, 189);"></p>
+                <p id="amount"></p>
             </div>
             <div class="m-trx__meta details">
-                <p class="ng-tns-c8-13" id="organisation_name"></p>
-                <p class="ng-tns-c8-13" id="merchant_reference"></p>
+                <p id="organisation_name"></p>
+                <p id="merchant_reference"></p>
             </div>
         </div>
 
