--- a/new8.html
+++ b/new8.html
@@ -20,7 +20,7 @@
 	    <hr style="margin-top: 8px">
 	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20desktop.png" width="100%">
 	    
-        <div class="m-trx">
+        <div class="m-trx container-fluid col-md-8 col-md-offset-2 text-center" style="margin-top: 3%">
             <div class="m-trx__amt amount">
                 <p id="amount"></p>
             </div>
