--- a/new88.html
+++ b/new88.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
 <html>
    <head>
+    <link rel="stylesheet" href="https://rhdtta.github.io/whtiestuff-checkout/bootstrap.css" />
    </head>
    <body>
 	<div class="m-template">
