--- a/new9.html
+++ b/new9.html
@@ -1,21 +1,39 @@
 <html>
-  <head>
-  </head>
-  <body>
-    <div class="m-template">
-      <div class="m-template__body">
-        <div class="m-trx">
-          <div class="m-trx__amt amount"><p id="amount"></p></div>
-          <div class="m-trx__meta details">
-            <p id="organisation_name"></p>
-            <p id="merchant_reference"></p>
-          </div>
+   <head>
+   </head>
+   <body>
+	<div class="m-template">
+    <div class="m-template__body">
+	    <div class="container-fluid" style="margin-top: 1%">
+		    <div class="col-md-4 col-md-offset-4 text-center">
+			    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png" width="45%" height="auto">
+		    </div>
+		    <h6>
+		    	<div class="text-right col-md-2 col-md-offset-2">
+		    		<img src="lock.png" width="12%" height="auto">
+				Secure Checkout
+			</div>
+		    </h6>
+		    
+	    </div>
+	    <hr style="margin-top: 8px">
+	    <img src="https://rhdtta.github.io/whtiestuff-checkout/UK%20progress%20bar%20desktop.png" width="100%">
+	    
+        <div class="m-trx container-fluid col-md-8 col-md-offset-2 text-center" style="margin-top: 3%">
+            <div class="m-trx__amt amount">
+                <p id="amount"></p>
+            </div>
+            <div class="m-trx__meta details">
+                <p id="organisation_name"></p>
+                <p id="merchant_reference"></p>
+            </div>
         </div>
+
         <div class="m-payment__form">
-          <form id="payment_fieldset" method="POST"></form>
-          <div id="jwt"></div>
+            <form id="payment_fieldset" method="POST"></form>
+            <div id="jwt"></div>
         </div>
-      </div>
     </div>
-  </body>
+</div>
+   </body>
 </html>
