--- a/new21.html
+++ b/new21.html
@@ -11,8 +11,8 @@
 		    <span class="text-right col-xs-4 col-sm-2 col-sm-offset-2">
 		    	<div>
 		    		<img src="lock.png" width="12%" height="auto">
-				<span class="hidden visible-sm visible-md visible-lg" style="font-size: 0.75em;">Secure Checkout</span>
-				<span class="hidden-sm hidden-md hidden-lg" style="font-size: 0.75em;">Secure</span>
+				<span class="hidden-xs" style="font-size: 0.75em;">Secure Checkout</span>
+				<span class="visible-xs" style="font-size: 0.75em;">Secure</span>
 			</div>
 			
 		    </span>
