--- a/new222.html
+++ b/new222.html
@@ -16,7 +16,7 @@
 		    	<div>
 		    		<img src="lock.png" width="8%" height="auto">
 				<strong class="hidden-xs" style="font-size: 0.85em; vertical-align: -4px;">Secure Checkout</strong>
-				<sstrong class="visible-xs" style="font-size: 0.85em; display:inline !important; vertical-align: -2px;">Secure</strong>
+				<strong class="visible-xs" style="font-size: 0.85em; display:inline !important; vertical-align: -2px;">Secure</strong>
 			</div>
 			
 		    </span>
