--- a/new222.html
+++ b/new222.html
@@ -16,7 +16,7 @@
 		    	<div>
 		    		<img src="lock.png" width="8%" height="auto">
 				<strong class="hidden-xs" style="font-size: 0.85em; vertical-align: -4px;">Secure Checkout</strong>
-				<strong class="visible-xs" style="font-size: 0.85em; display:inline !important; vertical-align: -2px;">Secure</strong>
+				<strong class="hidden-sm hidden-md hidden-lg" style="font-size: 0.85em; vertical-align: -2px;">Secure</strong>
 			</div>
 			
 		    </span>
@@ -40,7 +40,6 @@
             </div>
             <div class="m-trx__meta details">
                 <p id="organisation_name"></p>
-                <p id="merchant_reference"></p>
             </div>
         </div>
 
