Update and rename new222.html to latest1.html

--- a/latest1.html
+++ b/latest1.html
@@ -4,6 +4,9 @@
    <body>
 	<div class="m-template">
     <div class="m-template__body">
+	    <div class="container-fluid text-center" style="line-height: 2.5em; background-color: #020202; color: #FFFFFF !important;; font-size: 12px; font-weight: 600">
+	       Shop with confidence with our 30 day free UK returns policy
+	   </div>
 	    <div class="container-fluid" style="margin-top: 1%">
 		    <div class="col-sm-4 col-sm-offset-4 text-center hidden-xs">
 			    <img src="WHITE_STUFF_LOGO_Horizontal_Black.png" width="35%" height="auto">
