Update and rename checkout_usd.html to checkout_usd1.html

--- a/checkout_usd1.html
+++ b/checkout_usd1.html
@@ -1,5 +1,6 @@
 <html>
    <head>
+      <link rel="stylesheet" href="/checkout_usd1.css">
    </head>
    <body>
       <div class="m-template">
@@ -8,7 +9,7 @@
                <div class="m-trx__amt amount">
                   <p id="amount_usd"></p>
                </div>
-               <div class="m-trx__meta details">
+               <div class="m-trx__meta details check">
                   <p id="organisation_name"></p>
                   <p id="merchant_reference"></p>
                </div>
