--- a/checkout_usd1.html
+++ b/checkout_usd1.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <link rel="stylesheet" href="/checkout_usd1.css">
+      <link rel="stylesheet" href="/whtiestuff-checkout/checkout_usd1.css">
    </head>
    <body>
       <div class="m-template">
