--- a/latest3.html
+++ b/latest3.html
@@ -1,5 +1,6 @@
 <html>
    <head>
+	   <link rel="stylesheet" href="/whtiestuff-checkout/bootstrap2.css">
    </head>
    <body>
 	<div class="m-template">
